<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="16dp">

    <EditText
        android:id="@+id/portEditText"
        android:layout_width="125sp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:autofillHints="Port"
        android:background="@drawable/edittext_border"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/port_number"
        android:inputType="number"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startStreamButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:text="@string/start_streaming6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/portEditText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/streamscreen"
        android:textAlignment="center"
        android:textColor="#0E00FF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share_your_screen_with_the_client"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/hyperlink"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:allowUndo="false"
        android:clickable="true"
        android:linksClickable="true"
        android:minHeight="48dp"
        android:text="@string/beeralator_com"
        android:textAlignment="center"
        android:textColor="#0E00FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/clickableImage"
        android:layout_width="202dp"
        android:layout_height="171dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:contentDescription="@string/the_cat"
        android:src="@drawable/cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startStreamButton" />

</androidx.constraintlayout.widget.ConstraintLayout>